[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "portfolio-llm-core"
version = "0.1.0"
description = "Shared Python LLM library for portfolio services"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
groq = ["groq>=1.0.0"]
anthropic = ["anthropic>=0.25.0"]
all = ["openai>=1.0.0", "groq>=1.0.0", "anthropic>=0.25.0"]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/portfolio_llm_core"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
